<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:text="@string/choose_date"/>

        <DatePicker
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_search_view"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_to_basket_btn"
                android:text="@string/save"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>