<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/ic_left"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_products_list_item"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            tools:ignore="LabelFor"
            tools:text="Jamshid Isoqov" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_products_list_item"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            tools:text="+998 90 714 41 02" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/input_birthday"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_products_list_item"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            tools:text="Feb 10.2022" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_to_basket_btn"
        android:text="@string/confirm"
        android:textColor="@color/white"/>

</LinearLayout>