<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="8dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_left"
            tools:ignore="ContentDescription" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:text="@string/confirm_order"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/image_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_delete"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:background="@drawable/bg_products_list_item"
        android:padding="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/basket_list_item_products" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_products"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:text="@string/order_value"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_order_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_products"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:text="514 000 sum" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:background="@drawable/bg_to_basket_btn" />


</LinearLayout>