<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/action_bar_container"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/image_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_left"
            tools:ignore="ContentDescription" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:text="@string/confirm_order"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            tools:ignore="UselessLeaf">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_products_list_item"
                android:orientation="vertical"
                android:padding="12dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_semi_bold"
                    android:text="@string/delivery_method"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/tv_on_the_way"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/sf_pro_semi_bold"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/delivery_method"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_on_way" />


                    <ImageView
                        android:id="@+id/image_check_on_the_way"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/light_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/tv_delivery_method"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/sf_pro_semi_bold"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/delivery_method"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_delivery" />

                    <ImageView
                        android:id="@+id/image_check_delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check"
                        tools:ignore="ContentDescription" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_products_list_item"
                android:orientation="vertical"
                android:padding="12dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_map_delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/sf_pro_semi_bold"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/delivery_address"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_map" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_products_list_item"
                android:orientation="vertical"
                android:padding="12dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_semi_bold"
                    android:text="@string/comment"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/input_comment"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_search_view"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/sf_pro_semi_bold"
                    android:gravity="center_vertical"
                    android:hint="@string/add_comment"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_products_list_item"
                android:orientation="vertical"
                android:padding="12dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_semi_bold"
                    android:text="@string/products"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/products_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/light_grey" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/sf_pro_semi_bold"
                        android:text="@string/order_value"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_order_all_sum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/sf_pro_semi_bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="304 000 sum"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_to_basket_btn"
        android:text="@string/confirm_order"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>